--- a/vue/bibliothecaire.html
+++ b/vue/bibliothecaire.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	 <title>Page Acceuil visiteur</title>
+	 <title>Page Bibliothecaire</title>
 	<link rel="stylesheet" href="../css/styleGeneral.css">
 	<link rel="stylesheet" href="../css/styleMenu.css">
 	<link rel="stylesheet" href="../css/styleFooter.css">
@@ -16,16 +16,17 @@
   
   <header>
 
-		<a href="../vue/accueil.html"><img src="../vue/images/Icones/logo.png" class="logo"
+		<a href="../vue/administrateur.html"><img src="../vue/images/Icones/logo.png" class="logo"
 			alt="icone du site"></a>
 		<a href="../vue/pageConnexion.html"><img src="../vue/images/Icones/icone_profil.png" class="profil" alt="icone de profil"></a>
 		<a href="https://www.iut-orsay.universite-paris-saclay.fr/"><img src="../vue/images/Icones/logo_iut.png" class="iut" alt="logo de l'iut d'orsay"></a>
-</header> 
+		<h2 class="statut"> Bibliothécaire </h2>
+</header>
+ 
 
  <nav class="style-1">
-		<a href="#" class="btn">Tout les ouvrages</a>
-		<a href="#" class="btn">Tous les types</a>
-		<a href="#" class="btn">Toutes les catégories</a>
+		<a href="#" class="btn">Tout Les Livres</a>
+		<a href="#" class="btn">Gerer Emprunt</a>
 		
 	</nav>
    
@@ -44,48 +45,26 @@
 			<h2 class="bloc1"> Derniers ouvrages ajoutés </h2>
 			
 			
-			<form method="GET" class="recherche" >
+			<form class="recherche">
 				<input type="text" name=text class="search" placeholder="Recherchez ici!">
 				<input type="submit" name="submit" class="submit" value="Rechercher" >
 			</form>
 			
 			
-			
-			
-			
-			
-			
-			
-			<?php
-			
-			
-
-
-     // Récupère la recherche
-     $recherche = isset($_GET['recherche']) ?  $_GET['recherche'] : '';
-
-     // la requete mysql
-     $q = $pdo-> query(
-     "SELECT titreOuvrage, lienImageOuvrage FROM Ouvrage
-      WHERE titreOuvrage LIKE '%$recherche%'
-      LIMIT 10");
-
-     // affichage du résultat
-     while( $r = mysqli_fetch_array($q)){
-     echo 'Résultat de la recherche: '.$r['titreOuvrage'].', '.$r['lienImageOuvrage'].' <br />';
-     }
-?>
-			
+			<img src="../vue/images/Images/Revue_Renault.PNG" alt="test 1">
+			<img class="info" src="../vue/images/Icones/info.png" alt="test 1">
+			<img src="../vue/images/Images/Le_Journal_De_Mickey.PNG" alt="test 1">
+			<img src="../vue/images/Icones/info.png" alt="test 1">
+			<img src="../vue/images/Images/L_Avenir_En_Commun_Le_Programme_Pour_L_Union_Populaire_Présenté_Par_Jean-Luc_Mélenchon.PNG" alt="test 1">
+			<img src="../vue/images/Icones/info.png" alt="test 1">
+			<img src="../vue/images/Images/Renaud_Séchan_Comme_Un_Enfant_Perdu_Autobiographie.PNG" alt="test 1">
+			<img src="../vue/images/Icones/info.png" alt="test 1">
 			
 			
 			
 	</section>
 
 </div>
-
-
-
-
 
 
 
