--- a/vue/menu.html
+++ b/vue/menu.html
@@ -1,13 +1,13 @@
  <header>
 
-		<a href="../vue/accueil.html"><img src="../vue/images/Icones/logo.png" class="logo"
+		<a href="vue/accueil.html"><img src="vue/images/Icones/logo.png" class="logo"
 			alt="icone du site"></a>
-		<a href="../vue/pageConnexion.html"><img src="../vue/images/Icones/icone_profil.png" class="profil" alt="icone de profil"></a>
-		<a href="https://www.iut-orsay.universite-paris-saclay.fr/"><img src="../vue/images/Icones/logo_iut.png" class="iut" alt="logo de l'iut d'orsay"></a>
+		<a href="vue/pageConnexion.html"><img src="vue/images/Icones/icone_profil.png" class="profil" alt="icone de profil"></a>
+		<a href="https://www.iut-orsay.universite-paris-saclay.fr/"><img src="vue/images/Icones/logo_iut.png" class="iut" alt="logo de l'iut d'orsay"></a>
 </header> 
 
  <nav class="style-1">
-		<a href="#" class="btn">Tout les ouvrages</a>
+		<a href="vue/toutOuvrages.html" class="btn">Tout les ouvrages</a>
 		<a href="#" class="btn">Tous les types</a>
 		<a href="#" class="btn">Toutes les catégories</a>
 		
