--- a/vue/toutOuvrages.html
+++ b/vue/toutOuvrages.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	 <title>Page Acceuil visiteur</title>
+	 <title>Page Acceuil tous les ouvrages</title>
 	<link rel="stylesheet" href="../css/styleGeneral.css">
 	<link rel="stylesheet" href="../css/styleMenu.css">
 	<link rel="stylesheet" href="../css/styleFooter.css">
@@ -44,7 +44,7 @@
 			<h2 class="bloc1"> Derniers ouvrages ajoutés </h2>
 			
 			
-			<form method="GET" class="recherche" >
+			<form class="recherche">
 				<input type="text" name=text class="search" placeholder="Recherchez ici!">
 				<input type="submit" name="submit" class="submit" value="Rechercher" >
 			</form>
@@ -52,40 +52,16 @@
 			
 			
 			
-			
-			
-			
-			
-			<?php
-			
-			
-
-
-     // Récupère la recherche
-     $recherche = isset($_GET['recherche']) ?  $_GET['recherche'] : '';
-
-     // la requete mysql
-     $q = $pdo-> query(
-     "SELECT titreOuvrage, lienImageOuvrage FROM Ouvrage
-      WHERE titreOuvrage LIKE '%$recherche%'
-      LIMIT 10");
-
-     // affichage du résultat
-     while( $r = mysqli_fetch_array($q)){
-     echo 'Résultat de la recherche: '.$r['titreOuvrage'].', '.$r['lienImageOuvrage'].' <br />';
-     }
-?>
-			
+			<img src="../vue/images/Images/Revue_Renault.PNG" alt="test 1">
+			<img src="../vue/images/Images/Le_Journal_De_Mickey.PNG" alt="test 1">
+			<img src="../vue/images/Images/L_Avenir_En_Commun_Le_Programme_Pour_L_Union_Populaire_Présenté_Par_Jean-Luc_Mélenchon.PNG" alt="test 1">
+			<img src="../vue/images/Images/Renaud_Séchan_Comme_Un_Enfant_Perdu_Autobiographie.PNG" alt="test 1">
 			
 			
 			
 	</section>
 
 </div>
-
-
-
-
 
 
 
